--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
 integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    crossorigin=""></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js" integrity="sha512-C2RveGuPIWqkaLAluvoxyiaN1XYNe5ss11urhZWZYBUA9Ydgj+hfGKPcxCzTwut1/fmjEZR7Ac35f2aycT8Ogw==" crossorigin="anonymous"></script> 
 </head>
 <body>
   <div id="mapid"></div> 
  <!--Java Script -->
+ <script type="text/javascript" src="static/js/config.js"></script>
 <!-- API key -->
-<script type="text/javascript" src="static/js/config.js"></script>
 <!-- Our JavaScript -->
-<script type="text/javascript" src="static/js/logic.js"></script>
+<script type="text/javascript" src="static/js/tectonic_plate_starter_logic.js"></script>
 </body>
 </html>
