final commit message

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
 integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    crossorigin=""></script>
+<!-- d3 JavaScript -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js" integrity="sha512-C2RveGuPIWqkaLAluvoxyiaN1XYNe5ss11urhZWZYBUA9Ydgj+hfGKPcxCzTwut1/fmjEZR7Ac35f2aycT8Ogw==" crossorigin="anonymous"></script> 
 </head>
 <body>
@@ -22,6 +24,6 @@ integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUT
  <script type="text/javascript" src="static/js/config.js"></script>
 <!-- API key -->
 <!-- Our JavaScript -->
-<script type="text/javascript" src="static/js/tectonic_plate_starter_logic.js"></script>
+<script type="text/javascript" src="static/js/challenge_logic.js"></script>
 </body>
 </html>
